# labour-market-simulator

./: main.py  pyproject.toml
src/: visualise_matplotlib.py
src/base_classes/: base_employee.py  base_employer.py  employment_info.py
src/functions/: hire.py  simulate.py
src/scenarios/: generous_frugal_fair.py  simplest.py
tests/test_base_classes/: test_base_classes.py
tests/test_functions/: test_hire.py  test_simulate.py
tests/test_scenarios/: test_frugal_fair_generous.py  test_simplest_classes.py
