[project]
name = "labour-market-simulator"
version = "0.1.0"
description = "Behavioural/mathematical/economic simulations for employees "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "polars>=1.22.0",
]

[tool.pytest.ini_options]
pythonpath = ['./src', './']

[dependency-groups]
dev = [
    "pytest>=8.3",
]
